bad/bin_op_ge_bool_int.example_compiler_output
ERROR
[1mbad/bin_op_ge_bool_int.lat:3:7: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `boolean` and `int`[m
	true >= 42;
	     [1;32m^[m
